--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.6.5",
     "element-plus": "^1.0.2-beta.35",
     "express": "^4.17.1",
+    "logrocket": "^1.0.14",
     "node-sass": "^5.0.0",
     "sass-loader": "^10.1.0",
     "serve-static": "^1.14.1",
